<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KThanThu</string>
    <string name="gg_bind_identity">绑定</string>
    <string name="gg_check_update">检查更新</string>
    <string name="gg_contacts_customer_service">联系客服</string>
    <string name="gg_dialog_cancel">取消</string>
    <string name="gg_dialog_confirm">确定</string>
    <string name="gg_enter_the_verification_code_text">请输入验证码</string>
    <string name="gg_fast_registration">快速注册</string>
    <string name="gg_float_popup_item_cancel_account">注销账号</string>
    <string name="gg_float_popup_item_user_center">用户中心</string>
    <string name="gg_forget_password">忘记密码</string>
    <string name="gg_get_verify_code">获取验证码</string>
    <string name="gg_guest_login">游客登录</string>
    <string name="gg_identity_authentication">身份认证</string>
    <string name="gg_identity_authentication_brief_introduction_text">根据国家相关法律规定，游戏用户需要使用真实有效身份证进行实名注册。</string>
    <string name="gg_identity_authentication_id_hint">请输入身份证号</string>
    <string name="gg_identity_authentication_id_text">身份证</string>
    <string name="gg_identity_authentication_username_hint">请输入您的姓名</string>
    <string name="gg_identity_authentication_username_text">姓名</string>
    <string name="gg_identity_confirm">确定</string>
    <string name="gg_input_bind_phone">请输入手机号</string>
    <string name="gg_input_password_bind">请输入密码</string>
    <string name="gg_input_register_account">6-15位字母与数字</string>
    <string name="gg_input_register_password">6-32位字母或数字</string>
    <string name="gg_input_verification_code">请输入验证码</string>
    <string name="gg_load_content_close">关闭</string>
    <string name="gg_load_content_message">重新获取内容</string>
    <string name="gg_load_content_retry">确定</string>
    <string name="gg_load_content_title">重试</string>
    <string name="gg_login">登录</string>
    <string name="gg_login_immediately">立即登录</string>
    <string name="gg_login_loading_user_name_text">用户名</string>
    <string name="gg_new_version_update">检查到新版本，现在进行更新吗？</string>
    <string name="gg_notify_activity_close">关闭</string>
    <string name="gg_online_customer_service">在线客服</string>
    <string name="gg_online_service">在线客服</string>
    <string name="gg_online_service_refresh">刷新</string>
    <string name="gg_other_register_methods">其他注册方式</string>
    <string name="gg_password_hint">登录密码</string>
    <string name="gg_pay_cancel_tips">支付正在处理中,若您已完成支付,请稍后在游戏内确认到账情况</string>
    <string name="gg_pay_title">支付</string>
    <string name="gg_permission_settings">权限设置</string>
    <string name="gg_phone_number_hint">请输入手机号码</string>
    <string name="gg_phone_number_not_exist">该手机号不存在</string>
    <string name="gg_phone_registered_next_text">下一步</string>
    <string name="gg_privacy_agree_continue">同意并继续</string>
    <string name="gg_privacy_refuse_exit">放弃并退出</string>
    <string name="gg_qq_login">QQ登录</string>
    <string name="gg_register_agreement_document_text">我已经阅读并同意</string>
    <string name="gg_register_agreement_text">用户协议</string>
    <string name="gg_register_confirm">注册</string>
    <string name="gg_register_password_hint">请输入密码</string>
    <string name="gg_resend_code">获取验证码</string>
    <string name="gg_resend_enter_verification_code">请输入验证码</string>
    <string name="gg_resend_password_by_confirm">确定</string>
    <string name="gg_resend_password_by_enter_password">请输入密码</string>
    <string name="gg_resend_password_by_get_validate_code">重新发送</string>
    <string name="gg_restore_password_by_phone_number">已绑定手机号，通过手机验证找回</string>
    <string name="gg_show_privacy_agree_continue">我知道了</string>
    <string name="gg_switch_user_text">切换账号</string>
    <string name="gg_title_login">登录</string>
    <string name="gg_title_register">注册</string>
    <string name="gg_title_register_by_phone_number">快速注册</string>
    <string name="gg_title_register_success">注册成功</string>
    <string name="gg_title_restore_password">重置密码</string>
    <string name="gg_title_verification">验证身份</string>
    <string name="gg_tourist_bind_title">游客绑定</string>
    <string name="gg_tv_resend_text">重新发送</string>
    <string name="gg_tx_agreement_document_text">我已经阅读并同意</string>
    <string name="gg_tx_agreement_text">用户协议</string>
    <string name="gg_update">更新</string>
    <string name="gg_update_confirm">确定</string>
    <string name="gg_update_exit">退出</string>
    <string name="gg_update_retry">重试</string>
    <string name="gg_updating">更新中</string>
    <string name="gg_user_center_close">关闭</string>
    <string name="gg_user_center_message">加载失败，请检查网络</string>
    <string name="gg_user_center_retry">重试</string>
    <string name="gg_user_permission_description">为向您提供更好的用户体验，游戏在特定场景可能需要向您申请以下手机系统权限。</string>
    <string name="gg_username_hint">账号/手机号</string>
    <string name="gg_verification">验证身份</string>
    <string name="gg_weibo_login">微博登录</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tivic_app_name">tivicSDK</string>
    <string name="tivic_code_blank">验证码不能为空</string>
    <string name="tivic_code_format_incorrect">验证码需为6位数字</string>
    <string name="tivic_confirm_password_blank">重复密码不能为空</string>
    <string name="tivic_confirm_password_differ">密码与重复密码不一致</string>
    <string name="tivic_confirm_password_format_incorrect">重复密码格式错误</string>
    <string name="tivic_displayname_blank">昵称不能为空</string>
    <string name="tivic_email_blank">邮箱不能为空</string>
    <string name="tivic_email_format_incorrect">邮箱格式不正确</string>
    <string name="tivic_error_guest_pay_refused">游客不支持支付</string>
    <string name="tivic_exit_cancel">再玩玩</string>
    <string name="tivic_exit_confirm">确定</string>
    <string name="tivic_exit_title">是否退出游戏?</string>
    <string name="tivic_guest_Login_check_failed">获取设备信息失败，请尝试以其他方式注册或登陆，或尝试开启被禁用的权限，重新登录</string>
    <string name="tivic_guest_bind_mobile_cancel">取消</string>
    <string name="tivic_guest_bind_mobile_confirm">确定</string>
    <string name="tivic_guest_bind_mobile_text">目前登录方式游客登录，请尽快升级账号，避免游戏数据丢失</string>
    <string name="tivic_guest_bind_mobile_title">账号升级</string>
    <string name="tivic_hide_permissions">暂未提供权限跳转</string>
    <string name="tivic_hide_privacy">暂未提供隐私政策</string>
    <string name="tivic_id_card_format_error">身份证格式错误</string>
    <string name="tivic_main_activity">org.cocos2dx.lua.AppActivity</string>
    <string name="tivic_mobile_blank">号码不能为空</string>
    <string name="tivic_mobile_format_incorrect">手机号码格式错误</string>
    <string name="tivic_network_account_not_exist">账号不存在或者被禁用</string>
    <string name="tivic_network_anti_addiction_error">用户信息已入库，但未通过防沉迷认证</string>
    <string name="tivic_network_email_has_been_bound">该邮箱已绑定其他账号</string>
    <string name="tivic_network_error_handling">处理错误</string>
    <string name="tivic_network_information_already_exists">用户信息已经存在</string>
    <string name="tivic_network_information_not_stored">用户信息尚未入库</string>
    <string name="tivic_network_invalid_app">无效APP接入</string>
    <string name="tivic_network_invalid_information_submitted">用户提交的信息无效</string>
    <string name="tivic_network_loading_identify">获取中...</string>
    <string name="tivic_network_loading_loading">连接中...</string>
    <string name="tivic_network_loading_login">登录中...</string>
    <string name="tivic_network_loading_pay">支付中...</string>
    <string name="tivic_network_login_username_password_error">用户名或密码错误</string>
    <string name="tivic_network_mobile_invalid">手机号无效</string>
    <string name="tivic_network_not_available">当前网络不可用</string>
    <string name="tivic_network_parameter_error">请求参数错误</string>
    <string name="tivic_network_phone_number_already_register">手机号码已注册</string>
    <string name="tivic_network_timed_out">连接超时</string>
    <string name="tivic_network_unknown_error">未知错误</string>
    <string name="tivic_network_validation_failure">验证码失效</string>
    <string name="tivic_password_blank">密码不能为空</string>
    <string name="tivic_password_format_incorrect">密码格式错误</string>
    <string name="tivic_permission_check_failed">获取设备信息失败，请尽快绑定账号，避免游客账号遗失</string>
    <string name="tivic_permission_checking">权限检测中</string>
    <string name="tivic_permission_need_grant">点击授予权限</string>
    <string name="tivic_permission_need_manual">需要您手动在[应用管理器]中授权</string>
    <string name="tivic_permission_restart">按住重启应用</string>
    <string name="tivic_please_enter_id_number">请输入身份证号</string>
    <string name="tivic_please_enter_name">请输入姓名</string>
    <string name="tivic_registered_phone_exist">该手机号已注册</string>
    <string name="tivic_splash_duration">2000</string>
    <string name="tivic_splash_path_1">loading.jpg</string>
    <string name="tivic_splash_path_2">null</string>
    <string name="tivic_splash_path_3">null</string>
    <string name="tivic_splash_path_4" />
    <string name="tivic_splash_path_5" />
    <string name="tivic_update">更新</string>
    <string name="tivic_update_check_content_failed">初始化失败，请检查网络</string>
    <string name="tivic_update_check_content_net_error">初始化失败</string>
    <string name="tivic_update_check_title_failed">检查更新失败</string>
    <string name="tivic_update_check_title_net_error">请检查网络</string>
    <string name="tivic_update_success_install">下载完成，请点击安装</string>
    <string name="tivic_usercente_cancel">否</string>
    <string name="tivic_usercente_confirm">是</string>
    <string name="tivic_usercente_message">请确定关闭悬浮窗</string>
    <string name="tivic_usercente_title">关闭</string>
    <string name="tivic_usercenter_web_url_string">https://ucenter.qingshangame.com/usercenter/v2/index.html#/home</string>
    <string name="tivic_usercenter_web_url_string_debug">http://dev.ucenter.tiancigame.cn/usercenter/v2/index.html#/home</string>
    <string name="tivic_username_blank">账号不能为空</string>
    <string name="tivic_username_exists">用户名已被注册</string>
    <string name="tivic_username_format_incorrect">账号格式错误</string>
</resources>
