<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/gg_shape_corner_outline"
        android:layout_width="289dp"
        android:layout_height="272dp">
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/gg_iv_return"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/gg_ui_iv_return"
                android:contentDescription="@null"/>
            <TextView
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_ui_orange"
                android:layout_gravity="center"
                android:id="@+id/gg_title_verify_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gg_title_verification"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/gg_iv_close"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/gg_ui_iv_close"
                android:contentDescription="@null"/>
        </FrameLayout>
        <TextView
            android:textSize="@dimen/gg_sixteen_sp"
            android:textColor="@color/gg_black"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/gg_enter_the_verification_code_text"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginTop="24dp">
            <TextView
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_black"
                android:id="@+id/gg_tv_check_verification_code_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="13"/>
            <TextView
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_black"
                android:gravity="center_horizontal"
                android:id="@+id/gg_tv_resend"
                android:background="@drawable/gg_shape_account_corner"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/gg_tv_resend_text"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <FrameLayout
                android:id="@+id/edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:textSize="@dimen/gg_sixteen_sp"
                    android:textColor="@color/gg_black"
                    android:gravity="center"
                    android:id="@+id/gg_et_verify_code"
                    android:background="@drawable/gg_shape_account_corner"
                    android:layout_width="157dp"
                    android:layout_height="27dp"
                    android:hint="@string/gg_resend_enter_verification_code"
                    android:maxLength="6"
                    android:inputType="number"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/gg_iv_verify_code_clear"
                    android:visibility="gone"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/gg_icon_input_clear"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/gg_iv_verify_code_alert"
                    android:visibility="gone"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/gg_icon_input_alert"
                    android:contentDescription="@null"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginTop="20dp">
            <TextView
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_white"
                android:gravity="center"
                android:id="@+id/gg_btn_confirm"
                android:background="@drawable/gg_shape_loginbutton_corner"
                android:layout_width="157dp"
                android:layout_height="27dp"
                android:text="@string/gg_resend_password_by_confirm"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_black"
                android:autoLink="all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/gg_tx_agreement_document_text"/>
            <TextView
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_blue"
                android:autoLink="all"
                android:id="@+id/gg_tx_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gg_tx_agreement_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
