<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/gg_shape_corner_outline"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="289dp"
        android:layout_height="272dp">
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/gg_iv_return"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/gg_ui_iv_return"
                android:contentDescription="@null"/>
            <TextView
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_ui_orange"
                android:layout_gravity="center"
                android:id="@+id/gg_title_check_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gg_title_verification"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/gg_iv_close"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/gg_ui_iv_close"
                android:contentDescription="@null"/>
        </FrameLayout>
        <TextView
            android:textColor="@color/gg_dark_grey"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/gg_restore_password_by_phone_number"/>
        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/gg_shape_account_corner"
            android:layout_width="257dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp">
            <ImageView
                android:id="@+id/gg_iv_phone_number_prompt"
                android:background="@drawable/gg_ui_iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/gg_iv_phone_number_prompt">
                <EditText
                    android:textSize="@dimen/gg_sixteen_sp"
                    android:textColor="@color/gg_black"
                    android:textColorHint="@color/gg_dark_grey"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/gg_et_phone_number"
                    android:background="@null"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/gg_phone_number_hint"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/gg_iv_phone_number_clear"
                    android:visibility="gone"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/gg_icon_input_clear"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/gg_iv_phone_number_alert"
                    android:visibility="gone"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/gg_icon_input_alert"
                    android:contentDescription="@null"/>
            </FrameLayout>
        </RelativeLayout>
        <TextView
            android:textSize="@dimen/gg_sixteen_sp"
            android:textColor="@color/gg_white"
            android:gravity="center"
            android:id="@+id/gg_btn_verification"
            android:background="@drawable/gg_shape_loginbutton_corner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:text="@string/gg_verification"/>
        <TextView
            android:textSize="@dimen/gg_twelve_sp"
            android:textColor="@color/gg_blue"
            android:gravity="center"
            android:id="@+id/gg_btn_contacts_customer_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/gg_contacts_customer_service"/>
    </LinearLayout>
</LinearLayout>
