<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/gg_shape_corner_outline"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="289dp"
        android:layout_height="272dp">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/gg_btn_identity_authentication_close"
            android:layout_width="40dp"
            android:layout_height="13dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/gg_ui_iv_close"
            android:contentDescription="@null"/>
        <TextView
            android:textSize="@dimen/gg_twelve_sp"
            android:textColor="@color/gg_black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/gg_identity_authentication_brief_introduction_text"/>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/gg_shape_account_corner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="13dp">
            <ImageView
                android:id="@+id/gg_iv_phone_number_prompt"
                android:background="@drawable/gg_ui_iv_realname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"/>
            <EditText
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_black"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:id="@+id/gg_et_identity_authentication_username"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gg_identity_authentication_username_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/gg_shape_account_corner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="13dp">
            <ImageView
                android:background="@drawable/gg_ui_iv_id_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"/>
            <EditText
                android:textSize="@dimen/gg_sixteen_sp"
                android:textColor="@color/gg_black"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:id="@+id/gg_et_identity_authentication_id"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gg_identity_authentication_id_hint"/>
        </LinearLayout>
        <Button
            android:textSize="@dimen/gg_sixteen_sp"
            android:textColor="@color/gg_white"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/gg_btn_identity_authentication"
            android:background="@drawable/gg_shape_loginbutton_corner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:text="@string/gg_identity_authentication"/>
    </LinearLayout>
</LinearLayout>
