<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gg_login_loading_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="320dp">
    <RelativeLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/gg_loading_background"
        android:layout_width="235dp"
        android:layout_height="110dp">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/gg_fourteen_sp"
                android:textColor="@color/gg_holo_green_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gg_login_loading_user_name_text"/>
            <TextView
                android:textSize="@dimen/gg_fourteen_sp"
                android:textColor="@android:color/black"
                android:id="@+id/gg_tv_loginloading_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <ProgressBar
                android:layout_gravity="center_vertical"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:indeterminateOnly="true"
                android:indeterminateDrawable="@drawable/gg_loading_progress_shape"
                android:indeterminateBehavior="repeat"/>
            <TextView
                android:textSize="@dimen/gg_fourteen_sp"
                android:textColor="@color/gg_black"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/tivic_network_loading_login"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_gravity="top|right"
        android:orientation="horizontal"
        android:id="@+id/gg_btn_switch"
        android:background="@drawable/gg_loading_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/gg_icon_switch"
            android:contentDescription="@null"/>
        <TextView
            android:textSize="@dimen/gg_eighteen_sp"
            android:textColor="@color/gg_black"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gg_switch_user_text"/>
    </LinearLayout>
</FrameLayout>
